# MetaFunction

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  ENHANCED_INTERFACE_COMPLETE.md  ENHANCED_UI_GUIDE.md  ENTERPRISE_DEPLOYMENT_COMPLETE.md  GITHUB_ACTIONS_ENHANCEMENT_FINAL_REPORT.md  MIGRATION_GUIDE.md  Makefile  OVERVIEW.md  PACKAGE_VERSION_ANALYSIS.md  PROJECT_COMPLETION_FINAL.md  RESTRUCTURE_COMPLETE.md  RESTRUCTURE_PLAN.md  USAGE_GUIDE.md  WORKFLOW_FAILURE_SUPPRESSION_FINAL_SUCCESS.md  WORKFLOW_IMPROVEMENT_ANALYSIS.md  app.py  app_legacy.py  ci_monitoring_report.txt  docker-compose.yml  pyproject.toml  readme  readme.md  requirements-bulletproof.txt  requirements-dev.txt  requirements-stable.txt  requirements.txt
.github/: dependabot.yml
app/: __init__.py  config.py  main.py
archive/: README.md
docs/: ARCHITECTURE_OVERVIEW.md  AUTOMATED_DOCUMENTATION_SYSTEM.md  CHANGE_HISTORY_SUMMARY.md  CODE_QUALITY_DASHBOARD.md  DEVELOPER_ONBOARDING.md  DEVELOPMENT_ENVIRONMENT_STANDARDIZATION.md  DOCUMENTATION_ORGANIZATION_SUCCESS.md  ENTERPRISE_DEPLOYMENT_GUIDE.md  ENTERPRISE_VALIDATION_FINAL.md  FINOPS_COST_OPTIMIZATION_PLATFORM.md  INTELLIGENT_TESTING_STRATEGY.md  OPERATIONAL_RUNBOOKS.md  PLATFORM_RESILIENCE_CHAOS_ENGINEERING.md  PROJECT_MEMORY_SYSTEM.md  PROJECT_STATUS.md  QUICK_START_GUIDE.md  README.md
examples/: ai_service_example.py  demo_enhanced_ui.sh
logs/: chat_logs.csv
requirements/: requirements-bulletproof.txt  requirements-lock.txt  requirements-stable.txt  requirements.txt
resolvers/: browser_pdf_extractor.py  full_text_resolver.py  google_scholar.py  institutional_access.py  scihub.py
scripts/: blue-green-deploy.sh  canary-deploy.sh  daily_reminder.py  deploy-enterprise.sh  enhanced-ci-monitor.py  github-actions-monitor.py  production-validation.sh  project_memory_tracker.py  push_to_all.sh  push_to_both.sh  record_session.py  restructure.py  test-github-actions-system.py  test-github-actions.py  validate-enterprise.sh  validate-github-actions.py
templates/: github_actions_dashboard.html  github_actions_enhanced_dashboard.html  index.html  index_fixed.html  (+3 more)
(+102 files in other folders)
